CourseWork: in progress

--- a/CourseWork/work.ipynb
+++ b/CourseWork/work.ipynb
@@ -411,8 +411,7 @@
     "    g = sns.FacetGrid(df[['gender', 'cardio'] + [factor]], col='gender', hue='cardio')\n",
     "    g.map(sns.histplot, factor)\n",
     "    g.add_legend()\n",
-    "plot_stat('age')\n",
-    "results = []"
+    "plot_stat('age')"
    ]
   },
   {
@@ -687,6 +686,31 @@
    "metadata": {},
    "source": [
     "*Поділ інформації на інформацію та результат*"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Зберігатимемо результати тестування моделей у списку results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = []"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Список результатів*"
    ]
   },
   {
@@ -1800,6 +1824,14 @@
    "metadata": {},
    "source": [
     "*Результати моделей*"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Отже, маємо, що метод Logistic Regression найкраще відпрацював на тестових даних, і його точність складає приблизно 63.73%. Найкраще на тренувальних даних відпрацював Random Forest із точністю 96.56%, але водночас і найгірше на тестових іщ 57.24%. У результаті, Logistic Regression найкраще себе показує."
    ]
   }
  ],
