--- a/CourseWork/work.ipynb
+++ b/CourseWork/work.ipynb
@@ -12,7 +12,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 Перевірка даних"
+    "## 3.1 Опис обраних даних"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Для вирішення поставленої задачі було обрано \"Cardiovascular Disease\" датасет. Він складається з 70 000 пацієнтів. Даний датасет містить в собі такі колонки, як-от: \"age\" - вік, \"height\" - зріст, \"weight\" - вага, \"gender\" - стать, \"ap_hi\" - систолічний кров’яний тиск, \"ap_lo\" - діастолічний артеріальний тиск, \"cholesterol\" - холестерол, \"gluc\" - глюкоза, \"smoke\" - чи курить пацієнт, \"alco\" - чи вживає алкоголь, \"active\" - фізична активність, \"cardio\" - присутність захворювання. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 Перевірка даних"
    ]
   },
   {
@@ -330,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Вибір ознак для аналізу"
+    "## 3.3 Вибір ознак для аналізу"
    ]
   },
   {
@@ -1831,7 +1847,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Отже, маємо, що метод Logistic Regression найкраще відпрацював на тестових даних, і його точність складає приблизно 63.73%. Найкраще на тренувальних даних відпрацював Random Forest із точністю 96.56%, але водночас і найгірше на тестових іщ 57.24%. У результаті, Logistic Regression найкраще себе показує."
+    "### З огляду бачимо, що на тестових даних усі методи відпрацювали більш-менш однаково. Однак на тренувальних даних Random Forest показує себе найкраще."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4 Висновок"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Аналіз результатів щодо серцево-судинних захворювань є критично важливим, оскільки він допомагає медичним працівникам краще зрозуміти фактори, які сприяють розвитку та прогресуванню серцево-судинних захворювань. Потім ці знання можна використати для розробки ефективніших стратегій профілактики та лікування."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Серцево-судинні захворювання, які включають такі стани, як ішемічна хвороба серця, інсульт і серцева недостатність, є основною причиною смерті в усьому світі. Вони спричинені поєднанням генетичних факторів, факторів навколишнього середовища та способу життя, що робить їх складними та важкими для вивчення."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Після аналізу даних встановлено, що метод Logistic Regression показав найкращі результати на тестових даних з точністю близько 63,73%. На тренувальних даних найкраще відпрацював Random Forest з точністю 96,56%, але на тестових даних його точність була найгіршою з результатом 57,24%. До того ж з матриць невідповідностей бачимо, що Logistic Regression виявив найбільше позитивно негативних результатів і найменше хибно негативних. Logistic Regression та SVM виявилися приблизно однаковими, проте через складність SVM було обрано набагато меншу вибірку ніж для Logistig Regression. Тому враховуючи те, що від діагностування хвороби залежить життя людини, я б обрав Logistig Regression."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Отже, висновок полягає в тому, що метод Logistic Regression є найбільш ефективним."
    ]
   }
  ],
