CourseWork: in progress

--- a/CourseWork/work.ipynb
+++ b/CourseWork/work.ipynb
@@ -20,23 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Для вирішення поставленої задачі було обрано \"Cardiovascular Disease\" датасет. Він складається з 70 000 пацієнтів. Даний датасет містить в собі такі колонки, як-от: \"age\" - вік, \"height\" - зріст, \"weight\" - вага, \"gender\" - стать, \"ap_hi\" - систолічний кров’яний тиск, \"ap_lo\" - діастолічний артеріальний тиск, \"cholesterol\" - холестерол, \"gluc\" - глюкоза, \"smoke\" - чи курить пацієнт, \"alco\" - чи вживає алкоголь, \"active\" - фізична активність, \"cardio\" - присутність захворювання. "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3.2 Перевірка даних"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Імпортуємо пакет pandas, завантажимо дані в датафрейм, виводимо інформацію про нього. Видалимо колонку id за допомогою методу pandas.Dataframe.drop, передавши в нього список з єдиним елементом id та параметром за замовчуванням inplace=True, щоб зміна відбулася в самому датафреймі, а не видало новий. Додатково імпортуємо модулі matplotlib.pyplot та seaborn для відображення графіків."
+    "### Імпортуємо пакет pandas, завантажимо дані в датафрейм, виводимо інформацію про нього. Для вирішення поставленої задачі було обрано \"Cardiovascular Disease\" датасет. Він складається з 70 000 пацієнтів. Даний датасет містить в собі такі колонки, як-от: \"age\" - вік, \"height\" - зріст, \"weight\" - вага, \"gender\" - стать, \"ap_hi\" - систолічний кров’яний тиск, \"ap_lo\" - діастолічний артеріальний тиск, \"cholesterol\" - холестерол, \"gluc\" - глюкоза, \"smoke\" - чи курить пацієнт, \"alco\" - чи вживає алкоголь, \"active\" - фізична активність, \"cardio\" - присутність захворювання. Додатково імпортуємо модулі matplotlib.pyplot та seaborn для відображення графіків."
    ]
   },
   {
@@ -290,7 +274,6 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "df = pd.read_csv('data/cardio_train.csv', sep=';')\n",
-    "df.drop(['id'], axis=1, inplace=True)\n",
     "df"
    ]
   },
@@ -299,6 +282,31 @@
    "metadata": {},
    "source": [
     "*Завантажений датафрейм*"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Видалимо колонку id за допомогою методу pandas.Dataframe.drop, передавши в нього список з єдиним елементом id та параметром за замовчуванням inplace=True, щоб зміна відбулася в самому датафреймі, а не видало новий. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(['id'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Видалення колонки \"id\"*"
    ]
   },
   {
@@ -346,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3 Вибір ознак для аналізу"
+    "## 3.2 Вибір ознак для аналізу"
    ]
   },
   {
@@ -403,7 +411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Бачимо, що найбільше на виникнення серцево-судинних захворювань впливає вік, вага, холестирол. Доволі цікавим фактами є кореляція між віком та холестиролом, статтю та курінням, статтю та алкоголем, холестиролом та глюкозою. Залежність між статтю та вагою і висотою доволі очевидна, що пояснюється звичайною різницею у фізичних показниках між чоловіком та жінокю. Зобразимо статистику факторів та винекненням захворювання, розділену за статтю. За допомогою функції seaborn.FacetGrid згрупуємо значення та за допомогою seaborn.histplot зобразимо їх у вигляді гістограми. Побудуємо статистику за віком."
+    "### Бачимо, що найбільше на виникнення серцево-судинних захворювань впливає вік, вага, холестерол. Доволі цікавим фактами є кореляція між віком та холестеролом, статтю та курінням, статтю та алкоголем, холестеролом та глюкозою. Залежність між статтю та вагою і висотою доволі очевидна, що пояснюється звичайною різницею у фізичних показниках між чоловіком та жінокю. Зобразимо статистику факторів та виникненням захворювання, розділену за статтю. За допомогою функції seaborn.FacetGrid згрупуємо значення та за допомогою seaborn.histplot зобразимо їх у вигляді гістограми. Побудуємо статистику за віком."
    ]
   },
   {
@@ -479,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Зобразимо статистику за холестиролом."
+    "### Зобразимо статистику за холестеролом."
    ]
   },
   {
@@ -507,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Статистика захворювання від холестиролу між чоловіками та жінками*"
+    "*Статистика захворювання від холестеролу між чоловіками та жінками*"
    ]
   },
   {
@@ -882,7 +890,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Визначимо точність моделі на тренувальних та тестових даних"
+    "### Визначимо точність моделі на тренувальних та тестових даних"
    ]
   },
   {
@@ -1204,7 +1212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Визначимо точність моделі на тренувальних та тестових даних"
+    "### Визначимо точність моделі на тренувальних та тестових даних"
    ]
   },
   {
@@ -1389,7 +1397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Визначимо точність моделі на тренувальних та тестових даних"
+    "### Визначимо точність моделі на тренувальних та тестових даних"
    ]
   },
   {
@@ -1560,7 +1568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Визначимо точність моделі на тренувальних та тестових даних"
+    "### Визначимо точність моделі на тренувальних та тестових даних"
    ]
   },
   {
