CourseWork: in progress

--- a/CourseWork/work.ipynb
+++ b/CourseWork/work.ipynb
@@ -758,8 +758,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Мною було обранодва методи для прогнозування а в подальшому і порівняніїх –це методи K-Nearest Neighbors та LogisticRegression.\n"
+    "### Було обрано чотири методи K-Nearest Neighbors, Logistic Regression, Random Forest, SVM."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### K-Nearest Neighbors (KNN) — це простий, але ефективний алгоритм машинного навчання, який використовується для завдань класифікації та регресії. Я обрав, щоб порівняти наскільки він швидший за інші алгоритми, оскільки він не робить жодних припущень щодо розподілу даних."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### До того ж однією з сильних сторін алгоритму KNN є те, що він легко інтерпретується. Прогнози можна пояснити, просто подивившись на K найближчих сусідів даної точки даних. Крім того, KNN може обробляти нелінійні межі рішень і може використовуватися як для бінарних, так і для багатокласових задач класифікації. Тому він чудово підійде для прогнозування хвороб, де треба враховувати багато факторів."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Однак, якщо датасети великі, то KNN може бути дорогим з обчислювальної точки зору. Крім того, продуктивність KNN значною мірою залежить від значення K, яке потрібно ретельно вибирати для досягнення оптимальних результатів."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression – це статистичний метод, який використовується для прогнозування ймовірності події. Оскільки її залежна змінна є двійковою, то це дуже підходить для виявлення хвороби: вона або є, або її нема."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression має кілька переваг перед іншими алгоритмами класифікації. По-перше, її легко реалізувати та інтерпретувати. По-друге, вона може обробляти як категоричні, так і безперервні незалежні змінні. Тобто можна обробляти як дискретні дані, які лекго визначити: вага, зріст - так і виявлення в організмі сполук, які складно визначити точно, і де робляться припущення про інтервали: рівень глюкози, рівень холестиролу, вітамінів в організмі тощо. По-третє, він може надати ймовірність події, що станеться, що корисно під час медичної діагностики."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest — це популярний алгоритм машинного навчання, який використовується для завдань класифікації та регресії. Це метод ансамблю, який поєднує передбачення кількох дерев рішень для отримання більш точних результатів."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Я його обрав, бо є стійким до шуму. До того ж цікаво, як він буде передбачувати наявність хвороби в пацієнта. Варто зауважити, що Random Forest може бути дорогим з точки зору обчислень, особливо при роботі з великими наборами даних і багатьма деревами. Також може бути важко інтерпретувати результати випадкового лісу, оскільки процес прийняття рішення розподіляється між кількома деревами."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "attachments": {},
