CourseWork: in progress

--- a/CourseWork/work.ipynb
+++ b/CourseWork/work.ipynb
@@ -818,29 +818,36 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### SVM - це популярний і потужний клас алгоритмів керованого навчання, які використовуються для завдань класифікації та регресії. SVM особливо добре підходять для проблем, де існують складні межі між класами. У медичній сфері це часто використовується для прогнузування пацієту декількох хвороб, де окреме захворювання - це клас, де варто мати чіткі межі для поставлення правильного діагнозу."
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Основна ідея SVM — знайти гіперплощину, яка найкраще розділяє дані на різні класи. Гіперплощина — це лінійна межа рішення, яка розділяє два класи в просторі ознак."
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Однією з сильних сторін SVM є те, що вони нечутливі до викидів, оскільки на гіперплощину впливають лише найближчі до неї точки. Це робить SVM дуже стійкими до зашумлених даних, де зазвичай пацієнтів дуже багато, а тому ця особливість є важливою."
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "### Однак SVM мають деякі обмеження. Навчання їх може бути дорогим з обчислювальної точки зору, особливо з великими наборами даних або просторами функцій великої розмірності. Крім того, вибір правильної функції ядра може бути складним, а продуктивність SVM залежить від вибору гіперпараметрів."
+   ]
   },
   {
    "attachments": {},
